2002-11-08  Emmanuel Beffara  <manu@beffara.org>

	* configure: Fixed the way we search for Python.

2002-11-07  Emmanuel Beffara  <manu@beffara.org>

	* src/util.py (Depend.make): Fixed date calculation to interact
	well with getmtime().

2002-11-06  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py: Added a check so to handle the case where
	someone else has run BibTeX, and removed the unportable "-terse"
	command-line option. And yes, after the release >:-(

	* Version 0.99.4 released.

	* src/__init__.py, src/modules/minitoc.py: Fixed file name computation
	for minitoc and multiple .aux files.

	* src/graphics/epstopdf.py: Hacked the epstopdf command to make it
	work with bad executables.

	* src/graphics/, src/modules/: Checked for return codes in
	external program executions.

	* src/__init__.py: Added code to watch for changes in the aux
	file, to prevent from abusive recompilation.

2002-11-05  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (Environment.execute): Rewrote the procedure for
	external program execution, to make things clean. This has the
	drawback of using UNIX-specific features.
	(Config.compile_cmd): Changed calling convention for portability
	among TeX distributions.

	* src/graphics/eps_gz.py, ...: Added automating extraction of
	bounding boxes from gzipped PostScript figures.

2002-11-04  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/minitoc.py, src/modules/minitoc-hyper.py, man/:
	Introduced minitoc support.

	* src/modules/README: Updated module interface documentation.

	* src/__init__.py (LogCheck.show_errors): Removed an invalid call
	to update_file that caused a crash in some cases.
	(Environment): Split the triggers for \input and \include to take
	care of multiple .aux files. Checked for arguments in the BibTeX
	triggers.

2002-10-15  Emmanuel Beffara  <manu@beffara.org>

	* rubber.spec.in, configure, setup.py, Makefile.in: Introduced RPM
	packaging rules.
